--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p><img src="images/ind.png"> &nbsp; <img src="images/usa.png"></p>
+                    <p><img src="images\ind.png"> &nbsp; <img src="images/usa.png"></p>
                     <p>I'm Vykunth, a self-proclaimed tech aficionado on a lifelong quest to conquer the digital realm. From the very moment I laid eyes on a computer, I knew it was going to be a lifelong love affair. I mean, seriously, who wouldn't be smitten by the endless possibilities of that sleek machine?
                         In 7th grade, I delved into the enchanting world of Linux, quickly becoming a wizard at unraveling its secrets. I even managed to install Mac OS on a non-darwin system with a mischievous grin on my face.
                         I pursued Information Technology as my undergraduate major at Anna University,India where I devoured Python tutorials, attended workshops, and undertook various projects to deepen my knowledge in this realm.
