--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     <p>I'm Vykunth, a self-proclaimed tech aficionado on a lifelong quest to conquer the digital realm. From the very moment I laid eyes on a computer, I knew it was going to be a lifelong love affair. I mean, seriously, who wouldn't be smitten by the endless possibilities of that sleek machine?
                         In 7th grade, I delved into the enchanting world of Linux, quickly becoming a wizard at unraveling its secrets. I even managed to install Mac OS on a non-darwin system with a mischievous grin on my face.
                         I pursued Information Technology as my undergraduate major at Anna University,India where I devoured Python tutorials, attended workshops, and undertook various projects to deepen my knowledge in this realm.
-                       Won several hackathons and in one of them, my team was the runner's up at the Smart India hackathon 2020 where over 500,000 stuents participated across India and also got an MoU signed between the central police and my college. Currently pursuing my masters in Data science at University at Buffalo.
-                        and actively seeking full time roles starting January 1 2024.</p>
+                       Won several hackathons and in one of them, my team was the runner's up at the Smart India hackathon 2020 where over 500,000 stuents participated across India and also got an MoU signed between the central police and my college. Currently pursuing my master's in Data science at University at Buffalo.
+                        and actively seeking full-time roles starting January 1, 2024.</p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="openTab('skills')">Skills</p>
                         <p class="tab-links" onclick="openTab('experience')">Experience</p>
